VisualBasic/gen/VisualBasicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/azuri_hirohinata/Desktop/ANTLR/StudyANTLR2/VisualBasic/VisualBasic.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class VisualBasicParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PLUS=1, MINUS=2, ASTERISK=3, SLASH=4, HAT=5, LT=6, GT=7, LE=8, GE=9, EQ=10, 
		NEQ=11, ASSIGN=12, OUTREF=13, DOT=14, COMMA=15, OPEN_PAREN=16, CLOSE_PAREN=17, 
		COLON=18, OPEN_BRACKET=19, CLOSE_BRACKET=20, OR=21, XOR=22, AND=23, MOD=24, 
		NOT=25, END=26, SELECT=27, CASE=28, TO=29, IS=30, DO=31, UNTIL=32, DOT_NUMBER=33, 
		DEC_NUMBER=34, HEX_NUMBER=35, REAL_NUMBER=36, STRING=37, NULL=38, IDENTIFIER=39, 
		WS=40, EOL=41, LINE_COMMENT=42;
	public const int
		RULE_input = 0, RULE_stmtList = 1, RULE_stmt = 2, RULE_assignStmt = 3, 
		RULE_subprogCtrlStmt = 4, RULE_expression = 5, RULE_orExpr = 6, RULE_andExpr = 7, 
		RULE_notExpr = 8, RULE_compareExpr = 9, RULE_addExpr = 10, RULE_modExpr = 11, 
		RULE_term = 12, RULE_unaryExpr = 13, RULE_powerExpr = 14, RULE_primaryExpr = 15, 
		RULE_constant = 16, RULE_variableAccess = 17, RULE_variable = 18, RULE_variableName = 19, 
		RULE_funcCall = 20, RULE_funcAccess = 21, RULE_paramAssign = 22;
	public static readonly string[] ruleNames = {
		"input", "stmtList", "stmt", "assignStmt", "subprogCtrlStmt", "expression", 
		"orExpr", "andExpr", "notExpr", "compareExpr", "addExpr", "modExpr", "term", 
		"unaryExpr", "powerExpr", "primaryExpr", "constant", "variableAccess", 
		"variable", "variableName", "funcCall", "funcAccess", "paramAssign"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'-'", "'*'", "'/'", "'^'", "'<'", "'>'", "'<='", "'>='", 
		"'='", "'<>'", "':='", "'=>'", "'.'", "','", "'('", "')'", "':'", "'['", 
		"']'", null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "'???'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PLUS", "MINUS", "ASTERISK", "SLASH", "HAT", "LT", "GT", "LE", "GE", 
		"EQ", "NEQ", "ASSIGN", "OUTREF", "DOT", "COMMA", "OPEN_PAREN", "CLOSE_PAREN", 
		"COLON", "OPEN_BRACKET", "CLOSE_BRACKET", "OR", "XOR", "AND", "MOD", "NOT", 
		"END", "SELECT", "CASE", "TO", "IS", "DO", "UNTIL", "DOT_NUMBER", "DEC_NUMBER", 
		"HEX_NUMBER", "REAL_NUMBER", "STRING", "NULL", "IDENTIFIER", "WS", "EOL", 
		"LINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VisualBasic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static VisualBasicParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public VisualBasicParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public VisualBasicParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class InputContext : ParserRuleContext {
		public StmtListContext stmtList() {
			return GetRuleContext<StmtListContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(VisualBasicParser.Eof, 0); }
		public InputContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_input; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInput(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InputContext input() {
		InputContext _localctx = new InputContext(Context, State);
		EnterRule(_localctx, 0, RULE_input);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 46; stmtList();
			State = 47; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtListContext : ParserRuleContext {
		public ITerminalNode[] EOL() { return GetTokens(VisualBasicParser.EOL); }
		public ITerminalNode EOL(int i) {
			return GetToken(VisualBasicParser.EOL, i);
		}
		public StmtContext[] stmt() {
			return GetRuleContexts<StmtContext>();
		}
		public StmtContext stmt(int i) {
			return GetRuleContext<StmtContext>(i);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmtList; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmtList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtListContext stmtList() {
		StmtListContext _localctx = new StmtListContext(Context, State);
		EnterRule(_localctx, 2, RULE_stmtList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IDENTIFIER || _la==EOL) {
				{
				{
				State = 50;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==IDENTIFIER) {
					{
					State = 49; stmt();
					}
				}

				State = 52; Match(EOL);
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public AssignStmtContext assignStmt() {
			return GetRuleContext<AssignStmtContext>(0);
		}
		public SubprogCtrlStmtContext subprogCtrlStmt() {
			return GetRuleContext<SubprogCtrlStmtContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_stmt);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; assignStmt();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; subprogCtrlStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignStmtContext : ParserRuleContext {
		public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		public ITerminalNode ASSIGN() { return GetToken(VisualBasicParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignStmtContext assignStmt() {
		AssignStmtContext _localctx = new AssignStmtContext(Context, State);
		EnterRule(_localctx, 6, RULE_assignStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62; variable();
			State = 63; Match(ASSIGN);
			State = 64; expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SubprogCtrlStmtContext : ParserRuleContext {
		public FuncCallContext funcCall() {
			return GetRuleContext<FuncCallContext>(0);
		}
		public SubprogCtrlStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_subprogCtrlStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSubprogCtrlStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SubprogCtrlStmtContext subprogCtrlStmt() {
		SubprogCtrlStmtContext _localctx = new SubprogCtrlStmtContext(Context, State);
		EnterRule(_localctx, 8, RULE_subprogCtrlStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; funcCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public OrExprContext[] orExpr() {
			return GetRuleContexts<OrExprContext>();
		}
		public OrExprContext orExpr(int i) {
			return GetRuleContext<OrExprContext>(i);
		}
		public ITerminalNode[] XOR() { return GetTokens(VisualBasicParser.XOR); }
		public ITerminalNode XOR(int i) {
			return GetToken(VisualBasicParser.XOR, i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 10, RULE_expression);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68; orExpr();
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==XOR) {
				{
				{
				State = 69; Match(XOR);
				State = 70; orExpr();
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrExprContext : ParserRuleContext {
		public AndExprContext[] andExpr() {
			return GetRuleContexts<AndExprContext>();
		}
		public AndExprContext andExpr(int i) {
			return GetRuleContext<AndExprContext>(i);
		}
		public ITerminalNode[] OR() { return GetTokens(VisualBasicParser.OR); }
		public ITerminalNode OR(int i) {
			return GetToken(VisualBasicParser.OR, i);
		}
		public OrExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrExprContext orExpr() {
		OrExprContext _localctx = new OrExprContext(Context, State);
		EnterRule(_localctx, 12, RULE_orExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; andExpr();
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OR) {
				{
				{
				State = 77; Match(OR);
				State = 78; andExpr();
				}
				}
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AndExprContext : ParserRuleContext {
		public NotExprContext[] notExpr() {
			return GetRuleContexts<NotExprContext>();
		}
		public NotExprContext notExpr(int i) {
			return GetRuleContext<NotExprContext>(i);
		}
		public ITerminalNode[] AND() { return GetTokens(VisualBasicParser.AND); }
		public ITerminalNode AND(int i) {
			return GetToken(VisualBasicParser.AND, i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_andExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAndExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AndExprContext andExpr() {
		AndExprContext _localctx = new AndExprContext(Context, State);
		EnterRule(_localctx, 14, RULE_andExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 84; notExpr();
			State = 89;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AND) {
				{
				{
				State = 85; Match(AND);
				State = 86; notExpr();
				}
				}
				State = 91;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NotExprContext : ParserRuleContext {
		public CompareExprContext compareExpr() {
			return GetRuleContext<CompareExprContext>(0);
		}
		public ITerminalNode[] NOT() { return GetTokens(VisualBasicParser.NOT); }
		public ITerminalNode NOT(int i) {
			return GetToken(VisualBasicParser.NOT, i);
		}
		public NotExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_notExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NotExprContext notExpr() {
		NotExprContext _localctx = new NotExprContext(Context, State);
		EnterRule(_localctx, 16, RULE_notExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NOT) {
				{
				{
				State = 92; Match(NOT);
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 98; compareExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompareExprContext : ParserRuleContext {
		public AddExprContext[] addExpr() {
			return GetRuleContexts<AddExprContext>();
		}
		public AddExprContext addExpr(int i) {
			return GetRuleContext<AddExprContext>(i);
		}
		public ITerminalNode[] EQ() { return GetTokens(VisualBasicParser.EQ); }
		public ITerminalNode EQ(int i) {
			return GetToken(VisualBasicParser.EQ, i);
		}
		public ITerminalNode[] NEQ() { return GetTokens(VisualBasicParser.NEQ); }
		public ITerminalNode NEQ(int i) {
			return GetToken(VisualBasicParser.NEQ, i);
		}
		public ITerminalNode[] LT() { return GetTokens(VisualBasicParser.LT); }
		public ITerminalNode LT(int i) {
			return GetToken(VisualBasicParser.LT, i);
		}
		public ITerminalNode[] GT() { return GetTokens(VisualBasicParser.GT); }
		public ITerminalNode GT(int i) {
			return GetToken(VisualBasicParser.GT, i);
		}
		public ITerminalNode[] LE() { return GetTokens(VisualBasicParser.LE); }
		public ITerminalNode LE(int i) {
			return GetToken(VisualBasicParser.LE, i);
		}
		public ITerminalNode[] GE() { return GetTokens(VisualBasicParser.GE); }
		public ITerminalNode GE(int i) {
			return GetToken(VisualBasicParser.GE, i);
		}
		public CompareExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compareExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompareExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompareExprContext compareExpr() {
		CompareExprContext _localctx = new CompareExprContext(Context, State);
		EnterRule(_localctx, 18, RULE_compareExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100; addExpr();
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << LE) | (1L << GE) | (1L << EQ) | (1L << NEQ))) != 0)) {
				{
				{
				State = 101;
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LT) | (1L << GT) | (1L << LE) | (1L << GE) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 102; addExpr();
				}
				}
				State = 107;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AddExprContext : ParserRuleContext {
		public ModExprContext[] modExpr() {
			return GetRuleContexts<ModExprContext>();
		}
		public ModExprContext modExpr(int i) {
			return GetRuleContext<ModExprContext>(i);
		}
		public ITerminalNode[] PLUS() { return GetTokens(VisualBasicParser.PLUS); }
		public ITerminalNode PLUS(int i) {
			return GetToken(VisualBasicParser.PLUS, i);
		}
		public ITerminalNode[] MINUS() { return GetTokens(VisualBasicParser.MINUS); }
		public ITerminalNode MINUS(int i) {
			return GetToken(VisualBasicParser.MINUS, i);
		}
		public AddExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_addExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AddExprContext addExpr() {
		AddExprContext _localctx = new AddExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_addExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; modExpr();
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				State = 109;
				_la = TokenStream.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 110; modExpr();
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModExprContext : ParserRuleContext {
		public TermContext[] term() {
			return GetRuleContexts<TermContext>();
		}
		public TermContext term(int i) {
			return GetRuleContext<TermContext>(i);
		}
		public ITerminalNode[] MOD() { return GetTokens(VisualBasicParser.MOD); }
		public ITerminalNode MOD(int i) {
			return GetToken(VisualBasicParser.MOD, i);
		}
		public ModExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_modExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModExprContext modExpr() {
		ModExprContext _localctx = new ModExprContext(Context, State);
		EnterRule(_localctx, 22, RULE_modExpr);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116; term();
			State = 121;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==MOD) {
				{
				{
				State = 117; Match(MOD);
				State = 118; term();
				}
				}
				State = 123;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TermContext : ParserRuleContext {
		public UnaryExprContext[] unaryExpr() {
			return GetRuleContexts<UnaryExprContext>();
		}
		public UnaryExprContext unaryExpr(int i) {
			return GetRuleContext<UnaryExprContext>(i);
		}
		public ITerminalNode[] ASTERISK() { return GetTokens(VisualBasicParser.ASTERISK); }
		public ITerminalNode ASTERISK(int i) {
			return GetToken(VisualBasicParser.ASTERISK, i);
		}
		public ITerminalNode[] SLASH() { return GetTokens(VisualBasicParser.SLASH); }
		public ITerminalNode SLASH(int i) {
			return GetToken(VisualBasicParser.SLASH, i);
		}
		public TermContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_term; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTerm(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TermContext term() {
		TermContext _localctx = new TermContext(Context, State);
		EnterRule(_localctx, 24, RULE_term);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124; unaryExpr();
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ASTERISK || _la==SLASH) {
				{
				{
				State = 125;
				_la = TokenStream.LA(1);
				if ( !(_la==ASTERISK || _la==SLASH) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 126; unaryExpr();
				}
				}
				State = 131;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnaryExprContext : ParserRuleContext {
		public PowerExprContext powerExpr() {
			return GetRuleContext<PowerExprContext>(0);
		}
		public ITerminalNode MINUS() { return GetToken(VisualBasicParser.MINUS, 0); }
		public ITerminalNode PLUS() { return GetToken(VisualBasicParser.PLUS, 0); }
		public UnaryExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unaryExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVisualBasicVisitor<TResult> typedVisitor = visitor as IVisualBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryExpr(this);
			else return visitor.VisitChildren(this);
		}
	}
